--- a/sass/modules/_paginations.scss
+++ b/sass/modules/_paginations.scss
@@ -58,7 +58,7 @@
   gap: 12px;
   flex-wrap: wrap;
   margin-bottom: 40px;
-  margin-top: 20px;
+  margin-top: 60px;
 
   @include sm {
     margin-top: 32px;
